tests/snapshots/backends_kotlin_android_snapshot_test__snapshot_basic__packages__kotlin_android__src__main__kotlin__dev__sample_crate__DemoBridge.kt.snap
---
source: tests/backends_kotlin_android_snapshot_test.rs
expression: "&file.content"
---
// Generated by alef. Do not edit by hand.
@file:Suppress(
    "ktlint:standard:max-line-length",
    "ktlint:standard:trailing-comma-on-declaration-site",
    "ktlint:standard:trailing-comma-on-call-site",
    "ktlint:standard:annotation",
    "MaxLineLength",
    "TooManyFunctions",
    "LongParameterList",
)

package dev.sample_crate

@Suppress("TooManyFunctions")
object DemoBridge {
    init { System.loadLibrary("demo_jni") }

    @Throws(DemoBridgeException::class)
    external fun nativeProcess(input: String, count: Int): String
}
